Fix for PrettyPhoto on mobile

--- a/resources/assets/css/main.css
+++ b/resources/assets/css/main.css
@@ -458,6 +458,13 @@ ul.nostyle i {
   background: rgba(0, 0, 0, 0.5);
   color: #fff;
 }
+
+@media only screen and (min-width: 768px) {
+  .portfolio-info {
+    display: none;
+  }
+}
+
 .portfolio-item .portfolio-item-inner .portfolio-info h3 {
   font-size: 16px;
   line-height: 1;
